# poetry-monorepo-deploy

./: README.md  pyproject.toml
poetry_monorepo_deploy/: __init__.py  plugin.py
poetry_monorepo_deploy/commands/buildproject/: __init__.py  project.py
poetry_monorepo_deploy/components/check/: __init__.py
poetry_monorepo_deploy/components/parsing/: __init__.py
poetry_monorepo_deploy/components/project/: __init__.py  create.py  packages.py  prepare.py
poetry_monorepo_deploy/components/toml/: __init__.py  read.py
