[tool.poetry]
name = "poetry-monodeploy-plugin"
version = "1.8.3"
description = "A Poetry plugin that makes it possible to use relative package includes."
authors = ["Peter Christoffer Holm"]
license = "MIT"
homepage = "https://github.com/peterchristofferholm/poetry-monorepo-deploy"
repository = "https://github.com/peterchristofferholm/poetry-monorepo-deploy"
readme = "README.md"
packages = [{include = "poetry_monorepo_deploy"}]

[tool.poetry.plugins."poetry.application.plugin"]
poetry-multiproject-plugin = "poetry_monorepo_deploy:MultiProjectPlugin"

[tool.poetry.dependencies]
python = "^3.8"
poetry = "*"
tomlkit = "0.*"
mypy = "1.*"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest = "^8.0.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
